# vibersvp

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: reminders.yml
src/vibersvp/: __init__.py  airtable.py  config.py  models.py  run.py  scheduler.py  templates.py
src/vibersvp/notifiers/: __init__.py  base.py  email_resend.py  sms_twilio.py
tests/: test_scheduler.py  test_templates.py
