[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vibersvp"
version = "0.1.0"
description = "Canvassing RSVP reminder worker for the Jack Sandor campaign (Airtable + email/SMS)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyairtable>=2.3,<4",
    "resend>=2.0",
    "twilio>=9.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
vibersvp = "vibersvp.run:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
# Lets the offline test suite import the package without installing it.
pythonpath = ["src"]
testpaths = ["tests"]
